--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,6 @@
-// =============================================================================
-// PostCSS SCSS Syntax: https://github.com/postcss/postcss-scss
-// =============================================================================
+/* PostCSS SCSS Syntax: https://github.com/postcss/postcss-scss */
 
-// https://github.com/postcss/postcss-scss#2-inline-comments-for-postcss
-
-// =============================================================================
-// PreCSS: https://github.com/jonathantneal/precss
-// =============================================================================
+/* PreCSS: https://github.com/jonathantneal/precss */
 
 $blue: #056ef0;
 $column: 200px;
@@ -20,9 +14,7 @@ $column: 200px;
   width: $column;
 }
 
-// =============================================================================
-// PostCSS Mixins: https://github.com/postcss/postcss-mixins
-// =============================================================================
+/* PostCSS Mixins: https://github.com/postcss/postcss-mixins */
 
 /* First sample */
 
@@ -33,8 +25,8 @@ $column: 200px;
       @mixin-content;
 
       &:hover {
-        color: white;
         background: $color;
+        color: white;
       }
     }
   }
@@ -53,8 +45,8 @@ $column: 200px;
   padding-left: 16px;
 
   &::after {
-    content: '';
     background: url(/icons/$(name).png);
+    content: '';
   }
 }
 
